# rio500

./: .gitignore  README.md  go.mod  go.sum  main.go
cmd/: brute_recovery.go  buspirate_eeprom.go  control_recovery.go  delete.go  download.go  firmware_upgrade.go  firmware_version.go  folder.go  format.go  info.go  list.go  quick_flash.go  recovery_card.go  root.go  upload.go  usb_explore.go  version.go
pkg/rio500/: font.go  rio500.go  usb.go
reference/: Rio500Flash_216.asm
reference/rio500-0.7/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  configure  configure.in  mkinstalldirs
reference/rio500-0.7/fonts/: 6581.fon  Makefile.am  Makefile.in  Readme.txt  amplitud.fon  camels.fon  ce.fon  ck.nfo  defjam.fon  dynamic.fon  flt.fon  future.fon  genesis.fon  heretic2.fon  hl1.fon  hl2.fon  kung_fu.fon  noname.fon  phont.fon  q2c.fon  qu.fon  sac.fon  shylock.fon  sin.fon  star.fon  trek.fon  triangle.fon
reference/rio500-0.7/include/: Makefile.am  Makefile.in  config.h  config.h.in  libfon.h  libpsf.h  librio500.h  librio500_api.h  rio500_usb.h  usbdevfs.h  usbdevice_fs.h  usbdrv.h
reference/rio500-0.7/lib/: Makefile.am  Makefile.in  libfon.c  libpsf.c  librio500-usbdevfs.c  librio500.c  librio500_api.c  usbdrvlinux.c
reference/rio500-0.7/scripts/: Makefile.am  Makefile.in  rio_add_directory
reference/rio500-0.7/src/: Makefile.am  Makefile.in  rio_add_folder.c  rio_add_song.c  rio_del_song.c  rio_font_info.c  rio_format.c  rio_get_song.c  rio_stat.c
tools/: bp4-firmware-v8.hex  pirate-loader  pirate-loader.c
